--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <li><span>Salt, to taste</span></li>
                 <li><span>Pepper, to taste</span></li>
                 <li><span>1 tablespoon of butter or oil</span></li>
-                <li><span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></li>
+                <li> <p class="po">Optional fillings: cheese, diced vegetables, cooked meats, herbs</p></li>
             </ul>
         </section>
 
         <section class="instructions">
             <h2>Instructions</h2>
             <ol type="1">
-                <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                <li>Cook the omelettle: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-                <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide if onto a plate.</li>
-                <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+                <li><span><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
+                <li><span><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
+                <li><span><strong>Cook the omelettle:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
+                <li><span><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
+                <li><span><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide if onto a plate.</span></li>
+                <li><span><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</span></li>
             </ol>
         </section>
 
@@ -52,20 +52,20 @@
             <p>The table below shows nutritional values per serving without the additional fillings.</p>
             <table>
                 <tr>
-                    <td>Calories</td>
-                    <td>277kcal</td>
+                    <td class="nutrientes">Calories</td>
+                    <td class="calorias">277kcal</td>
                 </tr>
                 <tr>
-                    <td>Carbs</td>
-                    <td>0g</td>
+                    <td class="nutrientes">Carbs</td>
+                    <td class="calorias">0g</td>
                 </tr>
                 <tr>
-                    <td>Protein</td>
-                    <td>20g</td>
+                    <td class="nutrientes">Protein</td>
+                    <td class="calorias">20g</td>
                 </tr>
                 <tr>
-                    <td>Fat</td>
-                    <td>22g</td>
+                    <td class="nutrientes">Fat</td>
+                    <td class="calorias">22g</td>
                 </tr>
             </table>
         </section>
