Finalização do projeto usando media query

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Page</title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="mobile.css" media="screen">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>  
-    <header>
-        <img src="images/image-omelette.jpeg" alt="Imagem de um omelette em um prato branco.">
-    </header>
+    
     <main>
+        <section>
+            <header>
+            <img src="images/image-omelette.jpeg" alt="Imagem de um omelette em um prato branco.">
+            </header>
+        </section>
         <section class="introducao">
             <h1>Simple Omelette Recipe</h1>
             <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
